Fix bug on iPhone of overlapping text

--- a/browser/scss/directives/navbar.scss
+++ b/browser/scss/directives/navbar.scss
@@ -213,7 +213,7 @@
 
 						a {
 							display: inline;
-							height: 34px;
+							height: 24px;
 							padding: 5px 0px;
 							cursor: pointer;
 						}
